--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">simple offline web site development</a></section><section class="mbr-section mbr-after-navbar" id="form1-2a" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy responsive web development software download</a></section><section class="mbr-section mbr-after-navbar" id="form1-2a" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 40px;">
     
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
         <div class="container">
@@ -82,7 +82,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONNECT WITH US">
 
-                        <input type="hidden" value="MOVT3PDB4p9aKNsUrjYC54jpJ4AQ52vVWw8ZlPV3kYLpNoz7a/mJM2jVMGOtqQShOLR5yEROnmE7P18m+HLh48JKZCKlQmVEu7WmUvbwglkF74P6gYl0zyI33Cia64sZ" data-form-email="true">
+                        <input type="hidden" value="3vseXVYXq50Fce6nH3iOYXOE1SyDKVQui+eDbkQVPp8zKW2URTDduHji6y4fR+AG1g9gFOaoSjee4H1vBQVdUtUpHGDsG+6fpRZu/puEtgs/+sMGg6R3xJCn2/vQnL+L" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -129,7 +129,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
                 <h3 class="mbr-section-title display-2">FOLLOW US</h3>
-                <div><a class="btn btn-social" title="Twitter" target="_blank" href="https://twitter.com/SaaSifyIO"><i class="socicon socicon-twitter"></i></a> <a class="btn btn-social" title="Facebook" target="_blank" href="https://www.facebook.com/SaaSifyIO"><i class="socicon socicon-facebook"></i></a>      <a class="btn btn-social" title="LinkedIn" target="_blank" href="https://www.linkedin.com/in/SaaSifyIO"><i class="socicon socicon-linkedin"></i></a>   </div>
+                <div><a class="btn btn-social" title="Twitter" target="_blank" href="https://twitter.com/SaaSifyIO"><i class="socicon socicon-twitter"></i></a> <a class="btn btn-social" title="Facebook" target="_blank" href="https://www.facebook.com/SaaSifyIO"><i class="socicon socicon-facebook"></i></a>      <a class="btn btn-social" title="LinkedIn" target="_blank" href="https://www.linkedin.com/company/SaaSifyIO"><i class="socicon socicon-linkedin"></i></a>   </div>
             </div>
         </div>
     </div>
