--- a/#marketing-blocks.html
+++ b/#marketing-blocks.html
@@ -27,6 +27,21 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-89641209-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+<!-- /Google Analytics -->
+
+
 <section id="menu-3a">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
@@ -60,7 +75,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">free wysiwyg web page development software</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader3 mbr-parallax-background mbr-after-navbar" id="extHeader3-1y" style="background-image: url(assets/images/business-teamwork-on-puzzle-pieces-to-success-1.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy responsive web site design software download</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader3 mbr-parallax-background mbr-after-navbar" id="extHeader3-1y" style="background-image: url(assets/images/business-teamwork-on-puzzle-pieces-to-success-1.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
 
@@ -226,7 +241,7 @@
                               <div class="galleryItem" href="#lb-extShop1-38" data-slide-to="0" data-toggle="modal">
                               <div class="item_overlay"></div>
                                   <div class="img_wraper">
-                                    <img alt="" src="assets/images/brand-presence-3000x2600-51158.png">
+                                    <img alt="" src="assets/images/brand-presence-3000x2600-510.png">
                                   </div> 
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
@@ -243,7 +258,7 @@
                               <div class="galleryItem" href="#lb-extShop1-38" data-slide-to="1" data-toggle="modal">
                               <div class="item_overlay"></div>
                                   <div class="img_wraper">
-                                    <img alt="" src="assets/images/product-market-fit-3000x2600-77159.png">
+                                    <img alt="" src="assets/images/product-market-fit-3000x2600-771.png">
                                   </div> 
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
@@ -260,7 +275,7 @@
                               <div class="galleryItem" href="#lb-extShop1-38" data-slide-to="2" data-toggle="modal">
                               <div class="item_overlay"></div>
                                   <div class="img_wraper">
-                                    <img alt="" src="assets/images/customer-profile-3000x2600-33160.png">
+                                    <img alt="" src="assets/images/customer-profile-3000x2600-332.png">
                                   </div> 
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
@@ -277,7 +292,7 @@
                               <div class="galleryItem" href="#lb-extShop1-38" data-slide-to="3" data-toggle="modal">
                               <div class="item_overlay"></div>
                                   <div class="img_wraper">
-                                    <img alt="" src="assets/images/sales-enablement-3000x2600-87161.png">
+                                    <img alt="" src="assets/images/sales-enablement-3000x2600-873.png">
                                   </div> 
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
@@ -294,7 +309,7 @@
                               <div class="galleryItem" href="#lb-extShop1-38" data-slide-to="4" data-toggle="modal">
                               <div class="item_overlay"></div>
                                   <div class="img_wraper">
-                                    <img alt="" src="assets/images/brand-campaign-3000x2600-51162.png">
+                                    <img alt="" src="assets/images/brand-campaign-3000x2600-514.png">
                                   </div> 
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
@@ -311,7 +326,7 @@
                               <div class="galleryItem" href="#lb-extShop1-38" data-slide-to="5" data-toggle="modal">
                               <div class="item_overlay"></div>
                                   <div class="img_wraper">
-                                    <img alt="" src="assets/images/product-launch-3000x2600-91163.png">
+                                    <img alt="" src="assets/images/product-launch-3000x2600-915.png">
                                   </div> 
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
@@ -345,7 +360,7 @@
                               <div class="galleryItem" href="#lb-extShop1-38" data-slide-to="7" data-toggle="modal">
                               <div class="item_overlay"></div>
                                   <div class="img_wraper">
-                                    <img alt="" src="assets/images/sales-campaign-3000x2600-12164.png">
+                                    <img alt="" src="assets/images/sales-campaign-3000x2600-126.png">
                                   </div> 
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
@@ -362,7 +377,7 @@
                               <div class="galleryItem" href="#lb-extShop1-38" data-slide-to="8" data-toggle="modal">
                               <div class="item_overlay"></div>
                                   <div class="img_wraper">
-                                    <img alt="" src="assets/images/brand-affinity-3000x2600-72165.png">
+                                    <img alt="" src="assets/images/brand-affinity-3000x2600-727.png">
                                   </div> 
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
@@ -379,7 +394,7 @@
                               <div class="galleryItem" href="#lb-extShop1-38" data-slide-to="9" data-toggle="modal">
                               <div class="item_overlay"></div>
                                   <div class="img_wraper">
-                                    <img alt="" src="assets/images/voice-of-customer-3000x2600-58166.png">
+                                    <img alt="" src="assets/images/voice-of-customer-3000x2600-588.png">
                                   </div> 
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
@@ -396,7 +411,7 @@
                               <div class="galleryItem" href="#lb-extShop1-38" data-slide-to="10" data-toggle="modal">
                               <div class="item_overlay"></div>
                                   <div class="img_wraper">
-                                    <img alt="" src="assets/images/product-adoption-3000x2600-69167.png">
+                                    <img alt="" src="assets/images/product-adoption-3000x2600-699.png">
                                   </div> 
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
@@ -413,7 +428,7 @@
                               <div class="galleryItem" href="#lb-extShop1-38" data-slide-to="11" data-toggle="modal">
                               <div class="item_overlay"></div>
                                   <div class="img_wraper">
-                                    <img alt="" src="assets/images/customer-advocacy-3000x2600-6168.png">
+                                    <img alt="" src="assets/images/customer-advocacy-3000x2600-610.png">
                                   </div> 
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
