--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,21 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-89641209-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+<!-- /Google Analytics -->
+
+
 <section id="menu-49">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
@@ -57,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy responsive web development software download</a></section><section class="mbr-section mbr-after-navbar" id="form1-2a" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">top html web site generator software</a></section><section class="mbr-section mbr-after-navbar" id="form1-2a" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 40px;">
     
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
         <div class="container">
@@ -82,7 +97,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONNECT WITH US">
 
-                        <input type="hidden" value="3vseXVYXq50Fce6nH3iOYXOE1SyDKVQui+eDbkQVPp8zKW2URTDduHji6y4fR+AG1g9gFOaoSjee4H1vBQVdUtUpHGDsG+6fpRZu/puEtgs/+sMGg6R3xJCn2/vQnL+L" data-form-email="true">
+                        <input type="hidden" value="gc7LQZ8Mh+SZ6XF8XUfbkUk+tXwdd/pKJAOKLm/0AKq0eLxUePJ92Zq9bxYk9w4ayPkojp28TQtjGMt5SFqKS5TCXwVO/F3squqeSuaPfnsaWtGqiUpB/Je0YE1ZAa65" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
