--- a/featured-blocks.html
+++ b/featured-blocks.html
@@ -27,6 +27,21 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-89641209-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+<!-- /Google Analytics -->
+
+
 <section id="menu-3a">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
@@ -60,7 +75,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top offline site building</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader3 mbr-parallax-background mbr-after-navbar" id="extHeader3-3n" style="background-image: url(assets/images/jigsaw-puzzle-concept.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple html website maker software download</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader3 mbr-parallax-background mbr-after-navbar" id="extHeader3-3n" style="background-image: url(assets/images/jigsaw-puzzle-concept.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
 
