--- a/startups.html
+++ b/startups.html
@@ -27,6 +27,21 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-89641209-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+<!-- /Google Analytics -->
+
+
 <section id="menu-3a">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
@@ -60,7 +75,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">simple offline site generator software download</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-3b" style="background-image: url(assets/images/small-business-startup-resize.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">responsive site generator software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-3b" style="background-image: url(assets/images/small-business-startup-resize.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
 
@@ -198,7 +213,7 @@
 
                     </div>
 
-                    <div class="icon-right"><span class="etl-icon icon-scope mbr-iconfont-features6" style="color: rgb(54, 54, 54);"></span></div>
+                    <div class="icon-right"><span class="etl-icon icon-scope mbr-iconfont-features6"></span></div>
 
                 </div>
 
@@ -212,7 +227,7 @@
                         <p class="description">Validate market readiness and brand promise. Assess product capabilities against customer needs/pains, competition/alternatives. Guide product roadmap and market positioning.&nbsp;<br></p>
 
                     </div>
-                    <div class="icon-right"><span class="etl-icon icon-mobile mbr-iconfont-features6" style="color: rgb(54, 54, 54);"></span></div>
+                    <div class="icon-right"><span class="etl-icon icon-mobile mbr-iconfont-features6"></span></div>
 
                 </div>
 
@@ -226,7 +241,7 @@
 
                 <div class="features-box">
 
-                    <div class="icon-left"><span class="etl-icon icon-profile-female mbr-iconfont-features6" style="color: rgb(54, 54, 54);"></span></div>
+                    <div class="icon-left"><span class="etl-icon icon-profile-female mbr-iconfont-features6"></span></div>
 
                     <div class="content">
 
@@ -241,7 +256,7 @@
 
                 <div class="features-box last">
 
-                    <div class="icon-left"><span class="mbri-cash mbr-iconfont-features6" style="color: rgb(54, 54, 54);"></span></div>
+                    <div class="icon-left"><span class="mbri-cash mbr-iconfont-features6"></span></div>
 
                     <div class="content">
 
