--- a/featured-blocks.html
+++ b/featured-blocks.html
@@ -75,7 +75,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">best bootstrap web page development software</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader3 mbr-parallax-background mbr-after-navbar" id="extHeader3-3n" style="background-image: url(assets/images/jigsaw-puzzle-concept.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">best responsive web builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader3 mbr-parallax-background mbr-after-navbar" id="extHeader3-3n" style="background-image: url(assets/images/jigsaw-puzzle-concept.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
 
@@ -551,7 +551,7 @@
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-3t" style="background-color: rgb(54, 54, 54); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container">
-        <p class="text-xs-center">(c) 2016 SAASIFY LLC. All rights reserved.<br></p>
+        <p class="text-xs-center">(c) 2017 SAASIFY LLC. All rights reserved.<br></p>
     </div>
 </footer>
 
